fixed table overflow on mobile view

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -74,6 +74,9 @@
   .prose a {
     @apply !text-[#85beff] visited:!text-[#c084fc];
   }
+  .prose table {
+    @apply block overflow-auto;
+  }
   .prose thead th:first-child,
   tbody td:first-child,
   tfoot td:first-child {
